--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:design:23.1.0'
     compile 'com.jjoe64:graphview:4.2.1'
@@ -38,5 +37,9 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.5.0'
+    compile 'com.jakewharton:disklrucache:2.0.2'
+    compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'com.himanshuvirmani:androidcache:1.0.1'
+
 
 }
